--- a/.specgraph/components/comp_consistency_monitor.yaml
+++ b/.specgraph/components/comp_consistency_monitor.yaml
@@ -4,62 +4,118 @@
 
 id: comp_consistency_monitor
 type: module
-desc: "核心比对逻辑，协调 MarkdownParser 和 SpecIndexer，比较 PRD Intent 与 Spec Structure，生成分层 Dashboard。"
+desc: "核心比对逻辑，协调 MarkdownParser、SpecIndexer 和 YAMLSchemaValidator，比较 PRD Intent 与 Spec Structure，验证 YAML 格式，生成分层 Dashboard。"
 file_path: "devspec/core/consistency.py"
 
 tech_stack:
   - rich
   - pathlib
 
+dependencies:
+  - comp_markdown_parser
+  - comp_spec_indexer
+  - comp_yaml_schema_validator
+  - comp_cli_app  # for Rich Console
+
 # === 详细设计 (Design) ===
 design:
-  # 公开接口定义
   api:
     - signature: "class ConsistencyMonitor"
-      desc: "一致性监控核心类，负责比对 PRD 和 SpecGraph"
-    - signature: "def __init__(self, root_path: Path)"
-      desc: "初始化监控器，加载 Parser 和 Indexer"
-    - signature: "def run_check(self) -> None"
-      desc: "执行完整检查流程，输出报告并生成 Dashboard"
+      desc: "一致性监控核心类，负责比对 PRD 和 SpecGraph，验证 YAML 格式"
+      methods:
+        - signature: "__init__(self, root_path: Path) -> None"
+          desc: "初始化监控器，加载 Parser、Indexer 和 SchemaValidator"
+          params:
+            - name: "root_path"
+              type: "Path"
+              desc: "项目根目录路径"
 
-  # 伪代码逻辑
+        - signature: "run_check(self) -> None"
+          desc: "执行完整检查流程，包括一致性检查和 Schema 验证，输出报告并生成 Dashboard"
+
+        - signature: "run_schema_validation(self) -> SchemaValidationReport"
+          desc: "仅执行 YAML Schema 验证"
+          returns:
+            type: "SchemaValidationReport"
+            desc: "Schema 验证报告"
+
   logic: |
-    1. 打印开始信息
-    2. [提取阶段]
-       - 调用 MarkdownParser 解析 PRD.md 锚点 -> prd_anchors
-       - 调用 SpecIndexer 索引 .specgraph -> yaml_nodes
-       - 获取所有唯一 ID 集合 (all_ids)
-    3. [分类阶段]
-       - 初始化列表: design_nodes, feature_nodes, component_nodes
-       - 构建反向索引: Component -> Parent Features (通过 realized_by 字段)
-       - 遍历 all_ids:
-         - 判断节点存在性 (in_prd, in_spec)
-         - 推断节点类型 (根据前缀 dom_, feat_, comp_ 等)
-         - 计算状态 (Synced, PRD Only, YAML Only)
-         - [Feature特有] 计算 Assignment Status (realized_by 数量)
-         - [Component特有] 获取 Parent Features
-         - 构建 node_info 字典并归类到对应列表
-       - 对所有列表按 ID 排序
-    4. [统计阶段]
-       - 计算 Spec Sync 率 (Synced节点数 / 总节点数)
-       - 计算 Feature Assignment 率 (已分配Feature数 / 总Feature数)
-       - 计算 Overall 进度 (加权平均: Spec 40% + Assignment 60%)
-    5. [展示阶段]
-       - 使用 Rich Table 分别展示 Design, Feature, Component 表格
-       - 使用颜色编码状态 (绿=Synced, 黄=PRD Only, 红=YAML Only)
-    6. [生成阶段]
-       - 生成 PRODUCT_DASHBOARD.md 内容
-       - 包含: 进度条, 统计摘要, 三张详细状态表
-       - 写入文件并打印成功信息
+    1. __init__(root_path):
+       1.1 初始化 MarkdownParser(root_path / "PRD.md")
+       1.2 初始化 SpecIndexer(root_path / ".specgraph")
+       1.3 初始化 YAMLSchemaValidator(root_path / ".specgraph")
+       1.4 初始化 Rich Console
 
-  # 依赖关系
-  dependencies:
-    - comp_markdown_parser
-    - comp_spec_indexer
-    - comp_cli_app (for Rich Console)
+    2. run_check():
+       2.1 打印开始信息 "[bold blue]DevSpec Monitor: Running consistency check...[/bold blue]"
 
-  # 输出文件格式
+       2.2 [Schema 验证阶段] - 新增
+           - 调用 YAMLSchemaValidator.validate_all() -> schema_report
+           - 输出 Schema 验证摘要:
+             - 总文件数, 有效数, 无效数, 警告数
+           - 如果有错误, 输出详细错误列表
+
+       2.3 [提取阶段]
+           - 调用 MarkdownParser 解析 PRD.md 锚点 -> prd_anchors
+           - 调用 SpecIndexer 索引 .specgraph -> yaml_nodes
+           - 获取所有唯一 ID 集合 (all_ids)
+
+       2.4 [分类阶段]
+           - 初始化列表: design_nodes, feature_nodes, component_nodes
+           - 构建反向索引: Component -> Parent Features (通过 realized_by 字段)
+           - 遍历 all_ids:
+             - 判断节点存在性 (in_prd, in_spec)
+             - 推断节点类型 (根据前缀 dom_, feat_, comp_ 等)
+             - 计算状态 (Synced, PRD Only, YAML Only)
+             - [Feature特有] 计算 Assignment Status (realized_by 数量)
+             - [Component特有] 获取 Parent Features
+             - 构建 node_info 字典并归类到对应列表
+           - 对所有列表按 ID 排序
+
+       2.5 [统计阶段]
+           - 计算 Spec Sync 率 (Synced节点数 / 总节点数)
+           - 计算 Feature Assignment 率 (已分配Feature数 / 总Feature数)
+           - 计算 Schema Compliance 率 (有效文件数 / 总文件数) - 新增
+           - 计算 Overall 进度 (加权平均: Spec 30% + Assignment 40% + Schema 30%)
+
+       2.6 [展示阶段]
+           - 输出 Schema Validation Table (新增):
+             - 列: File, Type, Status, Errors, Warnings
+             - 颜色: 绿=Valid, 黄=Warnings, 红=Invalid
+           - 使用 Rich Table 分别展示 Design, Feature, Component 表格
+           - 使用颜色编码状态 (绿=Synced, 黄=PRD Only, 红=YAML Only)
+
+       2.7 [生成阶段]
+           - 生成 PRODUCT_DASHBOARD.md 内容
+           - 包含: 进度条, 统计摘要, Schema验证表, 三张详细状态表
+           - 写入文件并打印成功信息
+
+    3. run_schema_validation():
+       3.1 调用 YAMLSchemaValidator.validate_all()
+       3.2 返回 SchemaValidationReport
+
   output_files:
     - path: "PRODUCT_DASHBOARD.md"
-      format: "Markdown with Progress Bars and Tables"
+      format: "Markdown with Progress Bars, Schema Validation Table, and Status Tables"
       encoding: "utf-8"
+
+  constants:
+    PROGRESS_WEIGHTS:
+      spec_sync: 0.30
+      feature_assignment: 0.40
+      schema_compliance: 0.30
+    STATUS_COLORS:
+      synced: "green"
+      prd_only: "yellow"
+      yaml_only: "red"
+      valid: "green"
+      warnings: "yellow"
+      invalid: "red"
+
+  error_handling:
+    - condition: "PRD.md 不存在"
+      action: "打印警告，跳过 PRD 一致性检查，仅执行 Schema 验证"
+    - condition: ".specgraph 目录不存在"
+      action: "打印错误并退出"
+    - condition: "Schema 验证发现错误"
+      action: "继续执行其他检查，但在报告中标记 Schema 问题"
