--- a/.specgraph/components/comp_cli_init.yaml
+++ b/.specgraph/components/comp_cli_init.yaml
@@ -26,34 +26,6 @@ design:
         type: "None"
         desc: "无返回值，通过 side effect 生成文件"
 
-# Component Definition: Init Command
-# Part of feat_cli_command_structure
-# Validated against sub_meta_schema.yaml
-
-id: comp_cli_init
-type: module
-desc: "`devspec init` 命令实现，为 Claude Code 和 Gemini CLI 生成 slash command 文件（包括 devspec-monitor 和 devspec-write-prd），使 AI CLI 可直接调用 DevSpec 命令。"
-file_path: "devspec/commands/init.py"
-
-tech_stack:
-  - typer
-  - rich
-  - pathlib
-
-dependencies:
-  - comp_cli_app
-
-# === 详细设计 (Design) ===
-design:
-  # 公开接口定义
-  api:
-    - signature: "def init() -> None"
-      desc: "生成 AI CLI 的 slash command 文件"
-      params: []
-      returns:
-        type: "None"
-        desc: "无返回值，通过 side effect 生成文件"
-
   # 伪代码逻辑
   logic: |
     1. 初始化 Rich console 对象
@@ -101,35 +73,78 @@ design:
 
     CLAUDE_COLLECT_REQ_TEMPLATE: |
       ---
-      allowed-tools: Read, Edit, Bash(uv run devspec validate-prd:*)
+      allowed-tools: Read, Bash(uv run devspec context:*), Bash(uv run devspec monitor:*)
       description: Collect, analyze and decompose user requirements
       ---
       # DevSpec Requirement Collector
 
-      You are the **DevSpec Requirement Collector**. Your task is to collect, analyze, and decompose user requirements without modifying the code.
+      You are the **DevSpec Requirement Collector**. Follow the 4-Phase dialogue flow to understand and decompose user requirements.
 
-      ## Instructions
+      **Core Principle**: 理解优先于分解，对话优先于流程 (Understanding before decomposition, dialogue before pipeline)
 
-      1. **Log Raw Input**: Append the user's raw requirement to `origin_req/raw_requirements.md` with a timestamp.
+      ---
 
-      2. **Vision Check**: Check if the requirement aligns with the Product Vision in `PRD.md`.
-         - If NOT aligned: Stop and explain why. Do not update any documentation.
-         - If aligned: Proceed to decomposition.
+      ## Phase 1: Understanding (理解需求) - REQUIRES CONFIRMATION
 
-      3. **Principle Check (CRITICAL)**: Before decomposition, you MUST load `des_architecture.yaml` and apply the following principles:
-         - **User Value Test**: Can the user independently accept this? (Yes -> Feature, No -> Component)
-         - **Granularity Rules**:
-           - **L0 (Domain)**: Strategic Scope (Cross-functional).
-           - **L1 (Feature)**: User Value Unit (Independent Acceptance).
-           - **L2 (Component)**: Detailed Design (1:1 File Mapping).
+      1. Load Product Vision:
+         ! uv run devspec context --phase understanding
 
-      4. **Decomposition & Doc Update**:
-         - **Cross-Domain**: Generate Domain-level subtasks. Update `product.yaml`.
-         - **Domain-Level**: Generate Feature-level subtasks. Update `product.yaml` and create/update `feat_*.yaml`.
-         - **Feature-Level**: Generate Component-level subtasks. Update `feat_*.yaml` and create/update `comp_*.yaml`.
-         - **Component-Level**: Update `comp_*.yaml`.
+      2. Read the context output, then **restate the user's requirement in your own words**.
 
-      5. **Report**: Generate a summary report in `reports/` folder with timestamp.
+      3. Ask the user: "我理解您的需求是 XXX，这个理解正确吗？"
+
+      4. **STOP and wait for user confirmation before proceeding.**
+
+      ---
+
+      ## Phase 2: Locating (定位影响)
+
+      After user confirms understanding:
+
+      1. Load Domain overview:
+         ! uv run devspec context --phase locating
+
+      2. Identify which Domain(s) are affected.
+
+      3. Determine if this is:
+         - A new Feature (requires Exhaustiveness Check)
+         - Modification to existing Feature
+         - Code-only change (skip Spec updates)
+
+      ---
+
+      ## Phase 3: Evaluating (评估变更)
+
+      1. If modifying existing Feature, load Feature context:
+         ! uv run devspec context --phase evaluating --focus <feature_id>
+
+      2. **Exhaustiveness Check** (CRITICAL):
+         - List all existing Features/Components in the affected area
+         - For EACH one, evaluate: "Can this requirement be satisfied by modifying this node?"
+         - Record rejection reason for each
+         - Only create NEW nodes if ALL existing nodes cannot satisfy
+
+      3. If new Feature needed:
+         - Check Vision alignment
+         - If not aligned, ask user: "此需求超出当前 Vision，是否要扩展？"
+
+      ---
+
+      ## Phase 4: Planning (生成计划) - REQUIRES CONFIRMATION
+
+      1. Load dependency graph:
+         ! uv run devspec context --phase planning --focus <node_id>
+
+      2. Generate change lists:
+         - Spec changes (PRD.md, YAML files)
+         - Code changes (Python files)
+         - Execution order (based on dependencies)
+
+      3. Present plan to user and ask: "是否按此计划执行？"
+
+      4. **STOP and wait for user confirmation before executing.**
+
+      ---
 
       ## User Requirement
 
@@ -138,30 +153,71 @@ design:
     GEMINI_COLLECT_REQ_TEMPLATE: |
       description = "Collect, analyze and decompose user requirements"
       prompt = """
-      You are the **DevSpec Requirement Collector**. Your task is to collect, analyze, and decompose user requirements without modifying the code.
+      You are the **DevSpec Requirement Collector**. Follow the 4-Phase dialogue flow to understand and decompose user requirements.
 
-      ## Instructions
+      **Core Principle**: 理解优先于分解，对话优先于流程 (Understanding before decomposition, dialogue before pipeline)
 
-      1. **Log Raw Input**: Append the user's raw requirement to `origin_req/raw_requirements.md` with a timestamp.
+      ---
 
-      2. **Vision Check**: Check if the requirement aligns with the Product Vision in `PRD.md`.
-         - If NOT aligned: Stop and explain why. Do not update any documentation.
-         - If aligned: Proceed to decomposition.
+      ## Phase 1: Understanding (理解需求) - REQUIRES CONFIRMATION
 
-      3. **Principle Check (CRITICAL)**: Before decomposition, you MUST load `des_architecture.yaml` and apply the following principles:
-         - **User Value Test**: Can the user independently accept this? (Yes -> Feature, No -> Component)
-         - **Granularity Rules**:
-           - **L0 (Domain)**: Strategic Scope (Cross-functional).
-           - **L1 (Feature)**: User Value Unit (Independent Acceptance).
-           - **L2 (Component)**: Detailed Design (1:1 File Mapping).
+      1. Load Product Vision by running: `uv run devspec context --phase understanding`
 
-      4. **Decomposition & Doc Update**:
-         - **Cross-Domain**: Generate Domain-level subtasks. Update `product.yaml`.
-         - **Domain-Level**: Generate Feature-level subtasks. Update `product.yaml` and create/update `feat_*.yaml`.
-         - **Feature-Level**: Generate Component-level subtasks. Update `feat_*.yaml` and create/update `comp_*.yaml`.
-         - **Component-Level**: Update `comp_*.yaml`.
+      2. Read the context output, then **restate the user's requirement in your own words**.
 
-      5. **Report**: Generate a summary report in `reports/` folder with timestamp.
+      3. Ask the user: "我理解您的需求是 XXX，这个理解正确吗？"
+
+      4. **STOP and wait for user confirmation before proceeding.**
+
+      ---
+
+      ## Phase 2: Locating (定位影响)
+
+      After user confirms understanding:
+
+      1. Load Domain overview by running: `uv run devspec context --phase locating`
+
+      2. Identify which Domain(s) are affected.
+
+      3. Determine if this is:
+         - A new Feature (requires Exhaustiveness Check)
+         - Modification to existing Feature
+         - Code-only change (skip Spec updates)
+
+      ---
+
+      ## Phase 3: Evaluating (评估变更)
+
+      1. If modifying existing Feature, load Feature context:
+         `uv run devspec context --phase evaluating --focus <feature_id>`
+
+      2. **Exhaustiveness Check** (CRITICAL):
+         - List all existing Features/Components in the affected area
+         - For EACH one, evaluate: "Can this requirement be satisfied by modifying this node?"
+         - Record rejection reason for each
+         - Only create NEW nodes if ALL existing nodes cannot satisfy
+
+      3. If new Feature needed:
+         - Check Vision alignment
+         - If not aligned, ask user: "此需求超出当前 Vision，是否要扩展？"
+
+      ---
+
+      ## Phase 4: Planning (生成计划) - REQUIRES CONFIRMATION
+
+      1. Load dependency graph:
+         `uv run devspec context --phase planning --focus <node_id>`
+
+      2. Generate change lists:
+         - Spec changes (PRD.md, YAML files)
+         - Code changes (Python files)
+         - Execution order (based on dependencies)
+
+      3. Present plan to user and ask: "是否按此计划执行？"
+
+      4. **STOP and wait for user confirmation before executing.**
+
+      ---
 
       ## User Requirement
 
