--- a/.specgraph/product.yaml
+++ b/.specgraph/product.yaml
@@ -53,12 +53,21 @@ domains:
       - name: "get_logger"
         signature: "get_logger(name: str) -> Logger"
         description: "Get a named Logger instance"
+      - name: "configure_logging"
+        signature: "configure_logging(level: str = 'INFO', format: str = 'rich', log_file: Optional[Path] = None) -> None"
+        description: "Configure global logging settings (called once at CLI entry point)"
       - name: "get_config"
         signature: "get_config(key: str, default: Any = None) -> Any"
-        description: "Get a configuration value"
+        description: "Get a configuration value (Public API)"
       - name: "load_config"
         signature: "load_config(path: Path) -> Dict"
-        description: "Load configuration from file"
+        description: "Load configuration from file (Public API)"
+      - name: "load_env_file"
+        signature: "load_env_file(path: Path = Path('.env')) -> None"
+        description: "Load environment variables from .env file (Public API)"
+      - name: "get_debug_mode"
+        signature: "get_debug_mode(cli_flag: Optional[bool] = None) -> bool"
+        description: "Get debug mode setting with priority: CLI > env > default (Public API)"
       - name: "handle_error"
         signature: "handle_error(error: Exception, context: Dict) -> None"
         description: "Unified error handling"
